# codegen/lib/apiclient/Item/_api/_apiRequestBuilder.cs
@@ -1,4 +1,5 @@
 // <auto-generated/>
+using Graph.Community.Item._api.HubSites;
 using Graph.Community.Item._api.Web;
 using Microsoft.Kiota.Abstractions;
 using System.Collections.Generic;
@@ -6,19 +7,25 @@ using System.IO;
 using System.Linq;
 using System.Threading.Tasks;
 using System;
-namespace Graph.Community.Item._api {
+namespace Graph.Community.Item._api
+{
     /// <summary>
     /// Builds and executes requests for operations under \{serverRelativeSiteUrl}\_api
     /// </summary>
-    public class _apiRequestBuilder : BaseRequestBuilder 
+    public class _apiRequestBuilder : BaseRequestBuilder
     {
-        /// <summary>The Web property</summary>
-        public WebRequestBuilder Web
+        /// <summary>The HubSites property</summary>
+        public Graph.Community.Item._api.HubSites.HubSitesRequestBuilder HubSites
         {
-            get => new WebRequestBuilder(PathParameters, RequestAdapter);
+            get => new Graph.Community.Item._api.HubSites.HubSitesRequestBuilder(PathParameters, RequestAdapter);
+        }
+        /// <summary>The Web property</summary>
+        public Graph.Community.Item._api.Web.WebRequestBuilder Web
+        {
+            get => new Graph.Community.Item._api.Web.WebRequestBuilder(PathParameters, RequestAdapter);
         }
         /// <summary>
-        /// Instantiates a new <see cref="_apiRequestBuilder"/> and sets the default values.
+        /// Instantiates a new <see cref="Graph.Community.Item._api._apiRequestBuilder"/> and sets the default values.
         /// </summary>
         /// <param name="pathParameters">Path parameters for the request</param>
         /// <param name="requestAdapter">The request adapter to use to execute the requests.</param>
@@ -26,7 +33,7 @@ namespace Graph.Community.Item._api {
         {
         }
         /// <summary>
-        /// Instantiates a new <see cref="_apiRequestBuilder"/> and sets the default values.
+        /// Instantiates a new <see cref="Graph.Community.Item._api._apiRequestBuilder"/> and sets the default values.
         /// </summary>
         /// <param name="rawUrl">The raw URL to use for the request builder.</param>
         /// <param name="requestAdapter">The request adapter to use to execute the requests.</param>
