# codegen/lib/apiclient/Models/HubSiteCollectionResponse.cs
@@ -7,36 +7,26 @@ using System;
 namespace Graph.Community.Models
 {
     #pragma warning disable CS1591
-    public class TimeZoneObject : IParsable
+    public class HubSiteCollectionResponse : IParsable
     #pragma warning restore CS1591
     {
-        /// <summary>The Description property</summary>
+        /// <summary>The value property</summary>
 #if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
 #nullable enable
-        public string? Description { get; set; }
+        public List<Graph.Community.Models.HubSite>? Value { get; set; }
 #nullable restore
 #else
-        public string Description { get; set; }
-#endif
-        /// <summary>The Id property</summary>
-        public int? Id { get; set; }
-        /// <summary>The TimeZoneInformation property</summary>
-#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
-#nullable enable
-        public Graph.Community.Models.TimeZoneInformation? TimeZoneInformation { get; set; }
-#nullable restore
-#else
-        public Graph.Community.Models.TimeZoneInformation TimeZoneInformation { get; set; }
+        public List<Graph.Community.Models.HubSite> Value { get; set; }
 #endif
         /// <summary>
         /// Creates a new instance of the appropriate class based on discriminator value
         /// </summary>
-        /// <returns>A <see cref="Graph.Community.Models.TimeZoneObject"/></returns>
+        /// <returns>A <see cref="Graph.Community.Models.HubSiteCollectionResponse"/></returns>
         /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
-        public static Graph.Community.Models.TimeZoneObject CreateFromDiscriminatorValue(IParseNode parseNode)
+        public static Graph.Community.Models.HubSiteCollectionResponse CreateFromDiscriminatorValue(IParseNode parseNode)
         {
             _ = parseNode ?? throw new ArgumentNullException(nameof(parseNode));
-            return new Graph.Community.Models.TimeZoneObject();
+            return new Graph.Community.Models.HubSiteCollectionResponse();
         }
         /// <summary>
         /// The deserialization information for the current model
@@ -46,9 +36,7 @@ namespace Graph.Community.Models
         {
             return new Dictionary<string, Action<IParseNode>>
             {
-                { "Description", n => { Description = n.GetStringValue(); } },
-                { "Id", n => { Id = n.GetIntValue(); } },
-                { "TimeZoneInformation", n => { TimeZoneInformation = n.GetObjectValue<Graph.Community.Models.TimeZoneInformation>(Graph.Community.Models.TimeZoneInformation.CreateFromDiscriminatorValue); } },
+                { "value", n => { Value = n.GetCollectionOfObjectValues<Graph.Community.Models.HubSite>(Graph.Community.Models.HubSite.CreateFromDiscriminatorValue)?.ToList(); } },
             };
         }
         /// <summary>
@@ -58,9 +46,7 @@ namespace Graph.Community.Models
         public virtual void Serialize(ISerializationWriter writer)
         {
             _ = writer ?? throw new ArgumentNullException(nameof(writer));
-            writer.WriteStringValue("Description", Description);
-            writer.WriteIntValue("Id", Id);
-            writer.WriteObjectValue<Graph.Community.Models.TimeZoneInformation>("TimeZoneInformation", TimeZoneInformation);
+            writer.WriteCollectionOfObjectValues<Graph.Community.Models.HubSite>("value", Value);
         }
     }
 }
